<resources>
    <string name="app_name">Doctorce</string>
    <string name="back_button_content_description">Back Button</string>
    <string name="enter_you_mobile_number">Enter you mobile number</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="by_continuing_you_agree_to_our">By continuing you agree to our</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="continue_text">Continue</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or_text">OR</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="enter_the_six_digit_otp_sent_to">Enter the six digit OTP sent to</string>
    <string name="dummy_phone_number">+917889534384</string>
    <string name="did_not_receive_otp">Didn\'t receive otp?</string>
    <string name="resend">Resend</string>
    <string name="dummy_doctor_decr">Jenny Wilson is a doctor of the highest category, candidate of medical sciences. She has an expertise of 16 years. Engaged in the prevention, diagnosis and treatment of a wide range of gastroenterological diseases. Also have excellent reviews by not patient</string>
    <string name="error_finding_doctor_details">Error fetching doctor details</string>

    <!--Place Holder Strings-->
    <string name="reviews_place_holder_string">( %1$d reviews)</string>
    <string name="speciality_posting_place_holder_string">%1$s . %2$s</string>
    <string name="full_name_cant_blank">Full Name can\'t be blank</string>
    <string name="invalid_name">Invalid name</string>
    <string name="address_cant_be_blank">Address can\'t be blank</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="dob_cant_be_blank">Date of birth can\'t be blank</string>
    <string name="invalid_date_of_birth">Invalid date of birth</string>
    <string name="no_gender_selected">No gender selected</string>
    <string name="phone_number_cant_be_blank">Phone Number can\'t be blank</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="please_fill_out_the_form_for_appointment">Please fill out the form for appointment</string>
    <string name="full_name">Full Name *</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="gender">Gender*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth*</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="address">Address*</string>
    <string name="e_g_janglat_mandi_anantnag_192101">E.g: Janglat mandi, Anantnag, 192101</string>
    <string name="contact_number">Contact Number*</string>
    <string name="e_g_9906612345">E.g: 9906612345</string>
    <string name="save_details">Save Details</string>
</resources>