<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <!--Toolbar-->
        <RelativeLayout
            android:id="@+id/toolbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="top"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/btnBack"
                layout="@layout/card_back_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/book_appointment"
                android:textColor="@color/black"
                android:textSize="@dimen/bold_heading1" />


        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbarlayout"
            app:layout_constraintBottom_toTopOf="@+id/btnSaveDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbarlayout">

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/please_fill_out_the_form_for_appointment"
                    android:textColor="#AB000000"
                    android:textSize="@dimen/bold_heading1" />

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/full_name"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />

                <!--Email Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:theme="@style/PatientDetailsInputTheme"
                    android:layout_width="match_parent"
                    app:hintAnimationEnabled="false"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/light_primary_color"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:imeOptions="actionNext"
                        android:id="@+id/etFullName"
                        android:fontFamily="@font/gilroy_medium"
                        android:hint="@string/enter_your_name"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/secondary_text_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/gender"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintTop_toBottomOf="@id/toolbarlayout"
                    tools:layout_editor_absoluteX="24dp">

                    <!--Upcoming-->
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/maleCard"
                        android:layout_width="0dp"
                        app:strokeWidth="1dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="0.6dp"
                        >

                        <LinearLayout
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">



                            <TextView
                                app:drawableTint="@color/primary_color"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/gilroy_medium"
                                android:text="@string/male"
                                android:textColor="@color/primary_color"
                                android:textSize="16sp"
                                app:drawableTopCompat="@drawable/ic_gender_male" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <!--Past-->
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/femaleCard"
                        android:layout_width="0dp"
                        app:strokeWidth="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="0.6dp"
                        >

                        <LinearLayout
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <TextView
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/gilroy_medium"
                                android:text="@string/female"
                                android:textColor="@color/primary_color"
                                android:textSize="16sp"
                                app:drawableTopCompat="@drawable/ic_gender_female"
                                app:drawableTint="@color/light_primary_color" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>


                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />

                <!--Date of birth Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    app:hintAnimationEnabled="false"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    android:theme="@style/PatientDetailsInputTheme"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/light_primary_color"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDateOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:imeOptions="actionNext"
                        android:textSize="17sp"
                        android:fontFamily="@font/gilroy_medium"
                        android:hint="@string/dd_mm_yyyy"
                        android:maxLength="10"
                        android:inputType="date"
                        android:textColorHint="@color/secondary_text_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/address"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />

                <!--Address Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    app:hintAnimationEnabled="false"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/light_primary_color"
                    app:boxStrokeWidth="0dp"
                    android:theme="@style/PatientDetailsInputTheme"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAddress"
                        android:maxLines="2"
                        android:textSize="17sp"
                        android:layout_width="match_parent"
                        android:imeOptions="actionNext"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_medium"
                        android:hint="@string/e_g_janglat_mandi_anantnag_192101"
                        android:inputType="textPostalAddress"
                        android:textColorHint="@color/secondary_text_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/contact_number"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />

                <!--Phone Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    app:hintAnimationEnabled="false"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/light_primary_color"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionGo"
                        android:maxLength="10"
                        android:fontFamily="@font/gilroy_medium"
                        android:hint="@string/e_g_9906612345"
                        android:textSize="17sp"
                        android:inputType="phone"
                        android:textColorHint="@color/secondary_text_color" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveDetails"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/save_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>